--- a/src/Dashboard/Views/Home/Dashboard.cshtml
+++ b/src/Dashboard/Views/Home/Dashboard.cshtml
@@ -28,7 +28,11 @@
                         <td>{{device.avg}}</td>
                         <td>{{device.above}}</td>
                         <td>{{device.below}}</td>
-                        <td><a href="javascript:void(0)" ng-click="actions.removeTemperatureDevice(device.id)"></a></td>
+                        <td> 
+                            <span>
+                                <a href="javascript:void(0)" ng-click="actions.removeTemperatureDevice(device.id)">Remove</a>
+                            </span> 
+                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -56,7 +60,11 @@
                             <td>{{device.avg}}</td>
                             <td>{{device.above}}</td>
                             <td>{{device.below}}</td>
-                            <td><a href="javascript:void(0)" ng-click="actions.removeHumidityDevice(device.id)"></a></td>
+                            <td> 
+                                <span>
+                                    <a href="javascript:void(0)" ng-click="actions.removeHumidityDevice(device.id)">Remove</a>
+                                </span>
+                            </td> 
                         </tr>
                     </tbody>
                 </table>
