--- a/src/Dashboard/Views/Home/Dashboard.cshtml
+++ b/src/Dashboard/Views/Home/Dashboard.cshtml
@@ -7,10 +7,16 @@
     <div ng-controller="dashboardController">
         <h2>Dashboard</h2>
 
-        <h3>Temperature</h3>
-        <button ng-click="actions.addNewTemperatureDevice()">Add New Temperature Device</button>
+
         <div class="row">
-            <div class="col-md-6"><canvas id="temperature" width="575" height="300"></canvas></div>
+            <h3>Temperature (MQTT)</h3>
+            <button ng-click="actions.addNewTemperatureDevice()">Add New Temperature Device</button>
+            <br/>
+        </div>
+        <div class="row">
+            <br/>
+            <div class="col-md-6"><canvas id="temperature" width="475" height="200"></canvas>
+            </div>
             <div class="col-md-6">
                 <table style="width: 100%">
                     <thead>
@@ -28,10 +34,10 @@
                         <td>{{device.avg}}</td>
                         <td>{{device.above}}</td>
                         <td>{{device.below}}</td>
-                        <td> 
+                        <td>
                             <span>
-                                <a href="javascript:void(0)" ng-click="actions.removeTemperatureDevice(device.id)">Remove</a>
-                            </span> 
+                                    <a href="javascript:void(0)" ng-click="actions.removeTemperatureDevice(device.id)">Remove</a>
+                                </span>
                         </td>
                     </tr>
                     </tbody>
@@ -39,38 +45,58 @@
             </div>
 
         </div>
-        <h3>Humidity</h3>
-        <button ng-click="actions.addNewHumidityDevice()">Add New Humidity Device</button>
         <div class="row">
-            <div class="col-md-6"><canvas id="humidity" width="575" height="300"></canvas></div>
+            <h3>Humidity (AMQP)</h3>
+            <button ng-click="actions.addNewHumidityDevice()">Add New Humidity Device</button>
+            <br/>
+        </div>
+        <div class="row">
+            <br/>
+            <div class="col-md-6"><canvas id="humidity" width="475" height="200"></canvas>
+            </div>
             <div class="col-md-6">
                 <table style="width: 100%">
                     <thead>
-                        <tr>
-                            <th>DeviceId</th>
-                            <th>Average Value</th>
-                            <th>Above Upper Limit</th>
-                            <th>Below Lower Limit</th>
-                            <th>&nbsp;</th>
-                        </tr>
+                    <tr>
+                        <th>DeviceId</th>
+                        <th>Average Value</th>
+                        <th>Above Upper Limit</th>
+                        <th>Below Lower Limit</th>
+                        <th>&nbsp;</th>
+                    </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="device in ui.humidityDevices">
-                            <td><span ng-style="{{device.style}}">{{device.id}}</span></td>
-                            <td>{{device.avg}}</td>
-                            <td>{{device.above}}</td>
-                            <td>{{device.below}}</td>
-                            <td> 
-                                <span>
+                    <tr ng-repeat="device in ui.humidityDevices">
+                        <td><span ng-style="{{device.style}}">{{device.id}}</span></td>
+                        <td>{{device.avg}}</td>
+                        <td>{{device.above}}</td>
+                        <td>{{device.below}}</td>
+                        <td>
+                            <span>
                                     <a href="javascript:void(0)" ng-click="actions.removeHumidityDevice(device.id)">Remove</a>
                                 </span>
-                            </td> 
-                        </tr>
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
 
             </div>
 
         </div>
+        <div class="row">
+            <h3>Heartbear (COaP)</h3>
+            <button ng-click="actions.addNewHumidityDevice()" ng-disabled="true">Add New Humidity Device</button>
+            <br />
+        </div>
+        <div class="row">
+            <br />
+            <div class="col-md-6">
+                <canvas id="coap" width="475" height="200"></canvas>
+            </div>
+            <div class="col-md-6"> 
+
+            </div>
+
+        </div>
     </div>
-</div> 
+</div>
